@@ -2,6 +2,7 @@ plugins {
 	id "java-library"
 	id "org.jetbrains.kotlin.jvm"
 	id "org.springframework.boot.auto-configuration"
+	id "org.springframework.boot.configuration-properties"
 	id "org.springframework.boot.conventions"
 	id "org.springframework.boot.deployed"
 	id "org.springframework.boot.optional-dependencies"
@@ -12,10 +13,14 @@ description = "Spring Boot AutoConfigure"
 dependencies {
 	api(project(":spring-boot-project:spring-boot"))
 
+	optional("co.elastic.clients:elasticsearch-java") {
+		exclude group: "commons-logging", module: "commons-logging"
+	}
 	optional("com.fasterxml.jackson.core:jackson-databind")
 	optional("com.fasterxml.jackson.dataformat:jackson-dataformat-cbor")
 	optional("com.fasterxml.jackson.dataformat:jackson-dataformat-xml")
 	optional("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+	optional("com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations")
 	optional("com.fasterxml.jackson.module:jackson-module-parameter-names")
 	optional("com.google.code.gson:gson")
 	optional("com.hazelcast:hazelcast")
@@ -25,29 +30,25 @@ dependencies {
 	optional("com.oracle.database.jdbc:ojdbc8")
 	optional("com.oracle.database.jdbc:ucp")
 	optional("com.samskivert:jmustache")
-	optional("com.sun.mail:jakarta.mail")
-	optional("de.flapdoodle.embed:de.flapdoodle.embed.mongo")
 	optional("io.lettuce:lettuce-core")
 	optional("io.projectreactor.netty:reactor-netty-http")
 	optional("io.r2dbc:r2dbc-spi")
 	optional("io.r2dbc:r2dbc-pool")
 	optional("io.rsocket:rsocket-core")
 	optional("io.rsocket:rsocket-transport-netty")
-	optional("io.undertow:undertow-servlet-jakarta") {
-		exclude group: "org.jboss.spec.javax.annotation", module: "jboss-annotations-api_1.3_spec"
-	}
-	optional("io.undertow:undertow-websockets-jsr-jakarta") {
-		exclude group: "org.jboss.spec.javax.annotation", module: "jboss-annotations-api_1.3_spec"
-	}
+	optional("io.undertow:undertow-servlet")
+	optional("io.undertow:undertow-websockets-jsr")
 	optional("jakarta.jms:jakarta.jms-api")
 	optional("jakarta.mail:jakarta.mail-api")
 	optional("jakarta.json.bind:jakarta.json.bind-api")
 	optional("jakarta.persistence:jakarta.persistence-api")
 	optional("jakarta.transaction:jakarta.transaction-api")
 	optional("jakarta.validation:jakarta.validation-api")
+	optional("jakarta.websocket:jakarta.websocket-api")
 	optional("jakarta.ws.rs:jakarta.ws.rs-api")
 	optional("javax.cache:cache-api")
 	optional("javax.money:money-api")
+	optional("org.apache.activemq:activemq-client-jakarta")
 	optional("org.apache.activemq:artemis-jakarta-client") {
 		exclude group: "commons-logging", module: "commons-logging"
 	}
@@ -59,15 +60,13 @@ dependencies {
 	}
 	optional("org.apache.httpcomponents.client5:httpclient5")
 	optional("org.apache.kafka:kafka-streams")
-	optional("org.apache.solr:solr-solrj") {
-		exclude group: "org.slf4j", module: "jcl-over-slf4j"
-	}
 	optional("org.apache.tomcat.embed:tomcat-embed-core")
 	optional("org.apache.tomcat.embed:tomcat-embed-el")
 	optional("org.apache.tomcat.embed:tomcat-embed-websocket")
 	optional("org.apache.tomcat:tomcat-jdbc")
 	optional("org.apiguardian:apiguardian-api")
-	optional("org.codehaus.groovy:groovy-templates")
+	optional("org.apache.groovy:groovy-templates")
+	optional("org.eclipse.angus:angus-mail")
 	optional("com.github.ben-manes.caffeine:caffeine")
 	optional("com.github.mxab.thymeleaf.extras:thymeleaf-extras-data-attribute")
 	optional("com.sendgrid:sendgrid-java") {
@@ -77,16 +76,25 @@ dependencies {
 	optional("com.zaxxer:HikariCP")
 	optional("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect")
 	optional("org.aspectj:aspectjweaver")
+	optional("org.cache2k:cache2k-spring")
 	optional("org.eclipse.jetty:jetty-webapp") {
-		exclude group: "javax.servlet", module: "javax.servlet-api"
 		exclude(group: "org.eclipse.jetty", module: "jetty-jndi")
+		exclude(group: "org.eclipse.jetty.toolchain", module: "jetty-jakarta-servlet-api")
 	}
 	optional("org.eclipse.jetty:jetty-reactive-httpclient")
 	optional("org.eclipse.jetty.websocket:websocket-jakarta-server") {
 		exclude(group: "org.eclipse.jetty", module: "jetty-jndi")
+		exclude(group: "org.eclipse.jetty.toolchain", module: "jetty-jakarta-servlet-api")
+		exclude(group: "org.eclipse.jetty.toolchain", module: "jetty-jakarta-websocket-api")
 	}
 	optional("org.eclipse.jetty.websocket:websocket-jetty-server") {
 		exclude(group: "org.eclipse.jetty", module: "jetty-jndi")
+		exclude(group: "org.eclipse.jetty.toolchain", module: "jetty-jakarta-servlet-api")
+	}
+	optional("org.ehcache:ehcache") {
+		artifact {
+			classifier = 'jakarta'
+		}
 	}
 	optional("org.elasticsearch.client:elasticsearch-rest-client") {
 		exclude group: "commons-logging", module: "commons-logging"
@@ -94,17 +102,28 @@ dependencies {
 	optional("org.elasticsearch.client:elasticsearch-rest-client-sniffer") {
 		exclude group: "commons-logging", module: "commons-logging"
 	}
-	optional("org.elasticsearch.client:elasticsearch-rest-high-level-client") {
-		exclude group: "commons-logging", module: "commons-logging"
-	}
 	optional("org.flywaydb:flyway-core")
 	optional("org.flywaydb:flyway-sqlserver")
 	optional("org.freemarker:freemarker")
-	optional("org.hibernate:hibernate-core-jakarta")
-	optional("org.hibernate:hibernate-jcache") {
-		exclude group: "org.hibernate", module: "hibernate-core"
-	}
+	optional("org.glassfish.jersey.containers:jersey-container-servlet-core")
+	optional("org.glassfish.jersey.containers:jersey-container-servlet")
+	optional("org.glassfish.jersey.core:jersey-server")
+	optional("org.glassfish.jersey.ext:jersey-spring6")
+	optional("org.glassfish.jersey.media:jersey-media-json-jackson")
+	optional("org.hibernate.orm:hibernate-core")
+	optional("org.hibernate.orm:hibernate-jcache")
 	optional("org.hibernate.validator:hibernate-validator")
+	optional("org.infinispan:infinispan-commons-jakarta")
+	optional("org.infinispan:infinispan-component-annotations")
+	optional("org.infinispan:infinispan-core-jakarta")
+	optional("org.infinispan:infinispan-jcache") {
+		exclude group: "org.infinispan", module: "infinispan-commons"
+		exclude group: "org.infinispan", module: "infinispan-core"
+	}
+	optional("org.infinispan:infinispan-spring5-embedded") {
+		exclude group: "org.infinispan", module: "infinispan-commons"
+		exclude group: "org.infinispan", module: "infinispan-core"
+	}
 	optional("org.influxdb:influxdb-java")
 	optional("org.jooq:jooq") {
 		exclude group: "javax.xml.bind", module: "jaxb-api"
@@ -112,8 +131,14 @@ dependencies {
 	optional("org.liquibase:liquibase-core") {
 		exclude group: "javax.xml.bind", module: "jaxb-api"
 	}
+	optional("org.messaginghub:pooled-jms") {
+		exclude group: "org.apache.geronimo.specs", module: "geronimo-jms_2.0_spec"
+	}
 	optional("org.mongodb:mongodb-driver-reactivestreams")
 	optional("org.mongodb:mongodb-driver-sync")
+	optional("org.opensaml:opensaml-core:4.0.1")
+	optional("org.opensaml:opensaml-saml-api:4.0.1")
+	optional("org.opensaml:opensaml-saml-impl:4.0.1")
 	optional("org.quartz-scheduler:quartz")
 	optional("org.springframework:spring-jdbc")
 	optional("org.springframework.integration:spring-integration-core")
@@ -149,6 +174,7 @@ dependencies {
 	optional("org.springframework.data:spring-data-neo4j")
 	optional("org.springframework.data:spring-data-r2dbc")
 	optional("org.springframework.data:spring-data-redis")
+	optional("org.springframework.graphql:spring-graphql")
 	optional("org.springframework.hateoas:spring-hateoas")
 	optional("org.springframework.security:spring-security-acl")
 	optional("org.springframework.security:spring-security-config")
@@ -156,11 +182,16 @@ dependencies {
 		exclude group: "javax.xml.bind", module: "jaxb-api"
 	}
 	optional("org.springframework.security:spring-security-messaging")
+	optional("org.springframework.security:spring-security-oauth2-authorization-server")
 	optional("org.springframework.security:spring-security-oauth2-client")
 	optional("org.springframework.security:spring-security-oauth2-jose")
 	optional("org.springframework.security:spring-security-oauth2-resource-server")
 	optional("org.springframework.security:spring-security-rsocket")
-	optional("org.springframework.security:spring-security-saml2-service-provider")
+	optional("org.springframework.security:spring-security-saml2-service-provider") {
+		exclude group: "org.opensaml", module: "opensaml-core"
+		exclude group: "org.opensaml", module: "opensaml-saml-api"
+		exclude group: "org.opensaml", module: "opensaml-saml-impl"
+	}
 	optional("org.springframework.security:spring-security-web")
 	optional("org.springframework.session:spring-session-core")
 	optional("org.springframework.session:spring-session-data-mongodb")
@@ -179,7 +210,6 @@ dependencies {
 	}
 	optional("org.thymeleaf:thymeleaf")
 	optional("org.thymeleaf:thymeleaf-spring6")
-	optional("org.thymeleaf.extras:thymeleaf-extras-java8time")
 	optional("org.thymeleaf.extras:thymeleaf-extras-springsecurity6")
 	optional("redis.clients:jedis")
 
@@ -190,13 +220,14 @@ dependencies {
 	testImplementation("com.github.h-thurow:simple-jndi")
 	testImplementation("com.ibm.db2:jcc")
 	testImplementation("com.jayway.jsonpath:json-path")
+	testImplementation("com.mysql:mysql-connector-j")
+	testImplementation("com.querydsl:querydsl-core")
 	testImplementation("com.squareup.okhttp3:mockwebserver")
 	testImplementation("com.sun.xml.messaging.saaj:saaj-impl")
 	testImplementation("io.projectreactor:reactor-test")
 	testImplementation("io.r2dbc:r2dbc-h2")
 	testImplementation("jakarta.json:jakarta.json-api")
 	testImplementation("jakarta.xml.ws:jakarta.xml.ws-api")
-	testImplementation("mysql:mysql-connector-java")
 	testImplementation("org.apache.logging.log4j:log4j-to-slf4j")
 	testImplementation("org.apache.tomcat.embed:tomcat-embed-jasper")
 	testImplementation("org.assertj:assertj-core")
@@ -207,7 +238,12 @@ dependencies {
 	testImplementation("org.junit.jupiter:junit-jupiter")
 	testImplementation("org.mockito:mockito-core")
 	testImplementation("org.mockito:mockito-junit-jupiter")
+	testImplementation("org.postgresql:postgresql")
+	testImplementation("org.postgresql:r2dbc-postgresql")
+	testImplementation("org.skyscreamer:jsonassert")
 	testImplementation("org.springframework:spring-test")
+	testImplementation("org.springframework:spring-core-test")
+	testImplementation("org.springframework.graphql:spring-graphql-test")
 	testImplementation("org.springframework.kafka:spring-kafka-test")
 	testImplementation("org.springframework.security:spring-security-test")
 	testImplementation("org.testcontainers:cassandra")
@@ -221,4 +257,18 @@ dependencies {
 
 	testRuntimeOnly("jakarta.management.j2ee:jakarta.management.j2ee-api")
 	testRuntimeOnly("org.jetbrains.kotlin:kotlin-reflect")
+}
+
+tasks.named("checkSpringConfigurationMetadata").configure {
+	exclusions = [
+		"spring.datasource.dbcp2.*",
+		"spring.datasource.hikari.*",
+		"spring.datasource.oracleucp.*",
+		"spring.datasource.tomcat.*",
+		"spring.groovy.template.configuration.*"
+	]
+}
+
+test {
+	jvmArgs += "--add-opens=java.base/java.net=ALL-UNNAMED"
 }
